[package]
name = "tilelive-serve"
version = "0.1.0"
authors = ["Stepan Kuzmin <to.stepan.kuzmin@gmail.com>"]
edition = "2018"

[dependencies]
actix-rt = "1.1"
actix-web = "1.0"
docopt = "1"
env_logger = "0.8.2"
futures = "0.3"
listenfd = "0.3"
log = "0.4"
serde = { version = "1", features = ["derive"] }
tilelive = { path = '../tilelive' }